--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.1.5",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
