--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@mantine/charts": "^7.16.3",
     "@mantine/code-highlight": "^7.16.3",
     "@mantine/core": "^7.16.3",
@@ -28,6 +29,7 @@
     "@tiptap/starter-kit": "^2.11.5",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
     "recharts": "^2.15.1"
