Backend: trusted users and login implemented

--- a/backend/.env
+++ b/backend/.env
@@ -7,4 +7,4 @@ POSTGRES_DB=db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_CONN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-
+SECRET_KEY=arsoitSOI8ENTIE*SO:F@@#*HTF@FF-UTKFVFO__IESVKOS!VISKoieEEF3ioersieosrnet298t2f8AK@TUV@u
