--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - ${SERVER_PORT}:3000
+      - ${BACKEND_PORT}:3000
 
     depends_on:
       postgres:
@@ -27,4 +27,11 @@ services:
       retries: 5
       start_period: 5s
 
+    restart: always
+
+  frontend:
+    container_name: frontend
+    build: ./frontend
+    ports:
+      - ${FRONTEND_PORT}:80
     restart: always
